--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,21 @@
+#tomcat端口号
+server.port=8080
+
 spring.datasource.driverClassName = com.mysql.jdbc.Driver
 spring.datasource.url = jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8&serverTimezone=UTC&useSSL=false
 spring.datasource.username = root
 spring.datasource.password =123456
 
-#tomcat端口号
-server.port=8092
-
 ##给mybatis的实体类取别名  typeAliasesPackage
 mybatis.type-aliases-package=com.neo.entity
 ## mybatis ：mapper存放位置
 mybatis.mapper-locations=classpath:mybatis/mapper/*.xml
-#mybatis.mapper-locations:classpath*:mybatis/mapper/*.xml
+
+spring.jpa.database=mysql
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5Dialect
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=HTML
+
